# Modern_CPP_Bonn_2018

./: .gitignore
homework_1/: command.sh  guessing_game.cpp  out
homework_2/: CMakeLists.txt
homework_2/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
homework_2/tests/: CMakeLists.txt  test_tools.cpp
lecture_2/: CMakeLists.txt
lecture_2/src/: CMakeLists.txt  hello.cpp  main.cpp
lecture_3/: CMakeLists.txt
lecture_3/src/: CMakeLists.txt  main.cpp  tool.cpp  tool.h
lecture_3/tests/: CMakeLists.txt  test_tool.cpp
lecture_4/: const_test  const_test.cpp
